flapivor/tests/tests-m3/hopix/typechecker/good/noarg.hopix
fun f () : unit = f ()

val test : unit = f ()