flapivor/tests/tests-m3/hopix/typechecker/bad/restrictpoly.hopix
fun id['a] (x: 'a) : 'a = x

fun twice (f : int -> int) : int -> int =
    \(x : int) => f (f (x))

val zero = twice (\(x : int) => id[bool] (x)) (0)